noinst_LIBRARIES = libModelChecker.a

libModelChecker_a_CPPFLAGS = \
	-I$(top_srcdir)/src/Utility \
	-I$(top_srcdir)/src/Interface \
	-I$(top_srcdir)/src/Core \
	-I$(top_srcdir)/src/FullCompiler \
	-I$(top_srcdir)/src/Higher \
	-I$(top_srcdir)/src/Temporal \
	-I$(top_srcdir)/src/Mixfix \
	-I$(top_srcdir)/src/StrategyLanguage \
	-I$(top_srcdir)/src/BuiltIn \
	-I$(top_srcdir)/src/Variable \
	-I$(top_srcdir)/src/S_Theory \
	-I$(top_srcdir)/src/NA_Theory \
	-I$(top_srcdir)/src/FreeTheory \
	-I$(top_srcdir)/src/CUI_Theory \
	-I$(top_srcdir)/src/AU_Theory \
	-I$(top_srcdir)/src/ACU_Theory \
	-I$(top_srcdir)/src/3rdParty


libModelChecker_a_SOURCES = \
	Symbol/ProofTermSymbol.cc \
	Symbol/CounterExampleSymbol.cc \
	Symbol/ltlrFairnessCheckerSymbol.cc
	

	
noinst_HEADERS = \
	Symbol/ltlrFairnessCheckerSymbol.hh




	
